--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ github: rwguerra # username
 twitter: cadoguerra # username
 linkedin: guerraricardo # username
 medium: @rwguerra # username
+instagram: cadoguerra # username
 google_analytics: UA-178428297-1
 
 # needed for travis-ci build
