--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ email: rwguerra@gmail.com # email
 github: rwguerra # username
 twitter: cadoguerra # username
 linkedin: guerraricardo # username
-medium: @rwguerra # username
+#medium: @rwguerra # username
 instagram: cadoguerra # username
 google_analytics: UA-178428297-1
 
