--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ safe: true
 # edit here to achieve your personal greatness
 url: https://rwguerra.github.io
 baseurl: https://rwguerra.github.io
-title: Mateus Bruno T. Lopes
-author: Mateus Lopes
-keywords: Project Manager, Scrum Master, Product Owner, Data Science, Ciência de Dados, Analytics, Power BI, BI, Redes de Computadores, Teste de Software.
-description: Mateus Bruno T. Lopes - Tecnólogo em Redes de Computadores, Especialista em Teste de Software, BI e Analytics, Project Manager, Scrum Master, Product Owner, Analytics, Power BI e Consultor de projetos de Ciência de Dados.
+title: Ricardo Wagner C. Guerra Filho
+author: Ricardo Guerra
+keywords: Data Science, Ciência de Dados, Machine Learning, Engineering, Deep Learning
+description: Ricardo Wagner Guerra - Engineer pursuing a Master's degree in Electrical Engineering @ UFPB.| Data Science, ML, DL enthusiast |
 avatar: profile.png # picture
 email: rwguerra@gmail.com # email
 github: rwguerra # username
