--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: Ricardo Wagner Guerra - Engineer pursuing a Master's degree in Elec
 avatar: profile.png # picture
 email: rwguerra@gmail.com # email
 github: rwguerra # username
-twitter: cadoguerra # username
+#twitter: cadoguerra # username
 linkedin: guerraricardo # username
 medium: rwguerra # username
 instagram: cadoguerra # username
